River-265 Fix for unlucky caching as requested. River-401 Changed to utilise URI in place of URL in map's and arrays to avoid unnecessary DNS lookups.
git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/trunk@1213641 13f79535-47bb-0310-9956-ffa450edef68